# rust-axum-testing

./: .env  Cargo.toml  deploy.sh  docker-compose-test.yml  docker-compose.yml  local_test.ps1  local_test.sh
db/init/: init.sql
src/: main.rs
src/config/: .gitkeep  database.rs
src/domain/: .gitkeep
src/domain/article/: entity.rs  mod.rs  route.rs
src/domain/article/dto/request/: create.rs  edit.rs
src/domain/article/dto/response/: create.rs  read_article.rs
src/domain/article/handler/: create.rs  delete.rs  read_article.rs  read_articles.rs  update.rs
src/domain/article/repository/: delete.rs  get_detail.rs  get_list.rs  mod.rs  save.rs  update.rs
src/domain/article/usecase/: create.rs  delete.rs  mod.rs  read_article.rs  update.rs
src/global/: .gitkeep  errors.rs
src/middleware/: .gitkeep
src/tests/: mocks.rs
